Fix some css - add scrollbar to body + fix z-fighting for identity card -- just remove unneeded before elem.

--- a/components/EgoSelection.module.scss
+++ b/components/EgoSelection.module.scss
@@ -44,6 +44,8 @@ $button-margin: 1rem;
 }
 
 .container {
+  @include mixins.orange-scrollbar;
+
   max-height: 90vh;  // Need for scroll
   width: 98%;
   @media(max-width: vars.$small-screen) {
