--- a/components/SinnerCard.module.scss
+++ b/components/SinnerCard.module.scss
@@ -18,18 +18,7 @@ $item-border: 2px solid vars.$board-light;
   overflow: hidden;
 }
 .selected {
-  border: 4px solid vars.$blood-red;
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
-
-    border: 2px solid vars.$blood-red;
-  }
+  border: 5px solid vars.$blood-red;
 }
 
 .top-container {
