--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
 @use 'vars';
+@use 'mixins';
 @use 'normalize.css/normalize.css';
 
 
@@ -15,6 +16,19 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   background: vars.$page-bg;
+
+  @include mixins.orange-scrollbar;
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+  &::-webkit-scrollbar-thumb, &::-webkit-scrollbar-track {
+    border-radius: 0;
+  }
+  @media (max-width: vars.$small-screen) {
+    &::-webkit-scrollbar-thumb, &::-webkit-scrollbar-track {
+      border-radius: 0;
+    }
+  }
 }
 
 a {
@@ -65,36 +79,4 @@ input[type="checkbox"]:checked::before {
 .board-dark {
   @extend .board;
   background: vars.$page-bg;
-}
-
-$scrollbar-w: 6px;
-$scrollbar-w-mobile: 3px;
-
-.sleek-scrollbar {
-  /* Foreground, Background */
-  scrollbar-color: vars.$orange-highlight vars.$grey;
-
-  &::-webkit-scrollbar {
-    width: $scrollbar-w;
-  }
-  &::-webkit-scrollbar-thumb { /* Foreground */
-    border-radius: $scrollbar-w;
-    background: vars.$orange-highlight;
-  }
-  &::-webkit-scrollbar-track { /* Background */
-    border-radius: $scrollbar-w;
-    background: vars.$grey;
-  }
-
-  @media (max-width: vars.$small-screen) {
-    &::-webkit-scrollbar {
-      width: $scrollbar-w-mobile;
-    }
-    &::-webkit-scrollbar-thumb {
-      border-radius: $scrollbar-w-mobile;
-    }
-    &::-webkit-scrollbar-track {
-      border-radius: $scrollbar-w-mobile;
-    }
-  }
 }
